Fixed the body overflow issue
Fixed the issue with overflow hidden on the body element

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,7 @@ html *:after {
 }
 
 body {
+    position: relative;
     height: 100%;
     margin: 0;
     background: #ffffff;
@@ -30,6 +31,7 @@ body {
     line-height: 1.6;
     font-weight: 400;
     color: #637280;
+    overflow-x: hidden;
 }
 
 img,
